app/assets/stylesheets/api/users.scss
// Place all the styles related to the Api::Users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
.login-form-box{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 10px;
  background:rgba(255,255,255, .5);
  width: 40%;
  left: 50%;
  margin-top: 15%;
  position: fixed;
  transform: translate(-50%,0%);
  min-width: 300px;
  color: black;
}
.login-form-container{
  margin: 0 auto;
  align-items: center;
  justify-content: center;
  background-image: url('https://o.aolcdn.com/images/dims3/GLOB/legacy_thumbnail/1060x600/format/jpg/quality/85/http%3A%2F%2Fhss-prod.hss.aol.com%2Fhss%2Fstorage%2Fadam%2Fe71787c02fa155539686892adef95467%2F75620674.jpeg');
  background-size: cover;
  height: 100vh;
}
.login-form-box a{
  color: green;
}
.login-form-box a:hover{
  color: lime;
  text-decoration: none;
}
.login-form label{
  padding: 10px;
}
.handle-submits {
  text-align: center;

}
.handle-submits input{
  margin: 10px;

}
.handle-submits button{
  margin: 10px;
}

